# MemoryForge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MemoryForge_architecture_v0.1.md  MemoryForge_phase2_plan.md  README.md  pyproject.toml
docs/: index.md
docs/engineering/: architecture-rules.md  artifact-layout.md
docs/exec-plans/completed/: 0001-first-commit.md
docs/product/: phase1-mvp.md
docs/schemas/: analysis-cache.schema.json  asset.schema.json  media-summary.schema.json  plan-validation-result.schema.json  project-brief.schema.json  scene-group-summary.schema.json  segment.schema.json  timeline-evaluation.schema.json  timeline-plan.schema.json
src/memoryforge/: __init__.py  cli.py  ingest.py  media.py  project.py
tests/: test_cli.py  test_ingest.py  test_project.py  test_schemas.py
