[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryforge"
version = "0.1.0"
description = "CLI-first AI media understanding and rough-cut harness."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MemoryForge Contributors" }
]
dependencies = []

[project.scripts]
memoryforge = "memoryforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
